[package]
name = "test_utils"
authors = ["Haneul Labs <build@haneul-labs.com>"]
version = "0.1.0"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
tokio = { version = "1.17.0", features = ["sync", "rt"] }
tokio-util = { version = "0.7.1", features = ["codec"] }
bytes = "1.1.0"
futures = "0.3.21"
async-trait = "0.1.53"
rand = "0.7.3"
rocksdb = "0.18.0"
tracing = { version = "0.1.34", features = ["log"] }
tempfile = "3.3.0"
bcs = "0.1.3"

haneul-adapter = { path = "../haneul_programmability/adapter" }
haneul-framework = { path = "../haneul_programmability/framework" }
move-package = { git = "https://github.com/move-language/move", rev = "4e025186af502c931318884df53c11bf34a664bc" }
move-core-types = { git = "https://github.com/move-language/move", rev = "4e025186af502c931318884df53c11bf34a664bc", features = ["address20"] }
typed-store = { git = "https://github.com/GeunhwaJeong/haneullabs-infra", rev ="d2976a45420147ad821baae96e6fe4b12215f743"}
narwhal-config = { git = "https://github.com/GeunhwaJeong/narwhal", rev = "976355d2ff75aefc6b7ec7fd32742d3d7188c4e0", package = "config" }

haneul-types = { path = "../haneul_types" }
haneul_core = { path = "../haneul_core" }
haneul-network = { path = "../network_utils" }
haneul = { path = "../haneul" }
