[package]
name = "test_utils"
authors = ["Haneul Labs <build@haneul-labs.com>"]
version = "0.1.0"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = { version = "1.0.57", features = ["backtrace"] }
tokio = { version = "1.18.2", features = ["sync", "rt"] }
tokio-util = { version = "0.7.2", features = ["codec"] }
bytes = "1.1.0"
futures = "0.3.21"
async-trait = "0.1.53"
rand = "0.7.3"
rocksdb = "0.18.0"
tracing = { version = "0.1.34", features = ["log"] }
tempfile = "3.3.0"
bcs = "0.1.3"

haneul-adapter = { path = "../haneul_programmability/adapter" }
haneul-framework = { path = "../haneul_programmability/framework" }
move-package = { git = "https://github.com/move-language/move", rev = "1b2d3b4274345f5b4b6a1a1bde5aee452003ab5b" }
move-core-types = { git = "https://github.com/move-language/move", rev = "1b2d3b4274345f5b4b6a1a1bde5aee452003ab5b", features = ["address20"] }
typed-store = { git = "https://github.com/GeunhwaJeong/haneullabs-infra", rev ="7c247967e5a5abd59ecaa75bc62b05bcdf4503fe"}
narwhal-config = { git = "https://github.com/GeunhwaJeong/narwhal", rev = "23745f48103656eae4a4205d0b3edd53ad8894de", package = "config" }

haneul-config = { path = "../crates/haneul-config" }
haneul-types = { path = "../crates/haneul-types" }
haneul_core = { path = "../haneul_core" }
haneul-network = { path = "../crates/haneul-network" }
haneul = { path = "../haneul" }
