[package]
name = "consensus-core"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Haneul Labs <build@haneul-labs.com>"]
edition = "2021"
publish = false

[dependencies]
async-trait.workspace = true
base64.workspace = true
bcs.workspace = true
bytes.workspace = true
cfg-if.workspace = true
enum_dispatch.workspace = true
fastcrypto.workspace = true
parking_lot.workspace = true
prometheus.workspace = true
rand.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
consensus-config.workspace = true
haneul-protocol-config.workspace = true

workspace-hack.workspace = true

haneullabs-metrics = { path = "../../crates/haneullabs-metrics" }
