[package]
name = "consensus-simtests"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Haneul Labs <build@haneul-labs.com>"]
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
haneul-simulator.workspace = true
anyhow.workspace = true
arc-swap.workspace = true
consensus-config.workspace = true
consensus-core.workspace = true
consensus-types.workspace = true
haneullabs-metrics.workspace = true
haneullabs-network.workspace = true
parking_lot.workspace = true
prometheus.workspace = true
haneul-config.workspace = true
haneul-macros.workspace = true
haneul-protocol-config.workspace = true
tokio.workspace = true
tracing.workspace = true
typed-store.workspace = true
tempfile.workspace = true
telemetry-subscribers.workspace = true

[dev-dependencies]
rand.workspace = true
