[package]
name = "anemo-benchmark"
version = "0.0.0"
authors = ["Andrew Schran <aschran@haneul-labs.com>", "Haneul Labs <build@haneul-labs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anemo.workspace = true
clap = { version = "4.1.4", features = ["derive"] }
haneullabs-network.workspace = true
rand.workspace= true
telemetry-subscribers.workspace = true
tokio = { workspace = true, features = ["full"] }
workspace-hack.workspace = true

[build-dependencies]
anemo-build.workspace = true

[dev-dependencies]
telemetry-subscribers.workspace = true
tokio = { workspace = true, features = ["test-util"] }
