[package]
name = "generate-json-rpc-spec"
version = "0.0.0"
authors = ["Haneul Labs <build@haneul-labs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = { version = "1.0.58", features = ["backtrace"] }
clap = { version = "3.1.17", features = ["derive"] }
pretty_assertions = "1.2.0"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.80"
tokio = { version = "1.18.2", features = ["full"] }
hyper = { version = "0.14.18", features = ["full"] }

haneul = { path = "../haneul" }
haneul-json-rpc = { path = "../haneul-json-rpc" }
haneul-json-rpc-api = { path = "../haneul-json-rpc-api" }
haneul-json = { path = "../haneul-json" }
haneul-types = { path = "../haneul-types" }
haneul-config = { path = "../haneul-config" }
test-utils = { path = "../test-utils" }
workspace-hack = { path = "../workspace-hack"}

move-package = { git = "https://github.com/move-language/move", rev = "f07e99473e6edfff22f30596dd493ac770f0bb4a" }
