[package]
name = "haneul-adapter-transactional-tests"
version = "0.1.0"
authors = ["Haneul Labs <eng@haneul-labs.com>"]
description = "Transactional tests for Haneul Adapter"
license = "Apache-2.0"
publish = false
edition = "2024"

[dev-dependencies]
datatest-stable.workspace = true
haneul-transactional-test-runner.workspace = true

[[test]]
name = "tests"
harness = false

[dependencies]
