[package]
name = "haneul-adapter"
version = "0.1.0"
authors = ["Haneul Labs <eng@haneul-labs.com>"]
description = "Adapter and accompanying CLI for local haneul development"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = { version = "1.0.64", features = ["backtrace"] }
bcs = "0.1.4"
leb128 = "0.2.5"
once_cell = "1.14.0"
linked-hash-map = "0.5.6"
tracing = "0.1.36"

move-binary-format.workspace = true
move-core-types.workspace = true
move-vm-runtime.workspace = true

haneul-framework = { path = "../haneul-framework" }
haneul-json = { path = "../haneul-json" }
haneul-verifier = { path = "../haneul-verifier" }
haneul-types = { path = "../haneul-types" }
haneul-cost-tables = { path = "../haneul-cost-tables"}
workspace-hack.workspace = true

[dev-dependencies]
move-package.workspace = true
