[package]
name = "haneul-adapter"
version = "0.1.0"
authors = ["Haneul Labs <eng@haneul-labs.com>"]
description = "Adapter and accompanying CLI for local haneul development"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = { version = "1.0.64", features = ["backtrace"] }
bcs = "0.1.4"
leb128 = "0.2.5"
tracing = "0.1.36"
serde = { version = "1.0.140", features = ["derive"] }

move-binary-format.workspace = true
move-bytecode-utils.workspace = true
move-bytecode-verifier.workspace = true
move-core-types.workspace = true
move-vm-runtime.workspace = true
move-vm-types.workspace = true

haneul-framework = { path = "../haneul-framework" }
haneul-verifier = { path = "../haneul-verifier" }
haneul-types = { path = "../haneul-types" }
haneul-protocol-config = { path = "../haneul-protocol-config" }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
haneul-macros = { path = "../haneul-macros" }

[dev-dependencies]
move-package.workspace = true
