[package]
name = "haneul-analytics-indexer"
version.workspace = true
authors = ["Haneul Labs <build@haneul-labs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"


[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
bcs.workspace = true
byteorder.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
csv.workspace = true
move-core-types.workspace = true
object_store.workspace = true
num_enum.workspace = true
prometheus.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
url.workspace = true
strum.workspace = true
strum_macros.workspace = true
parquet.workspace = true
arrow-array.workspace = true
fastcrypto = { workspace = true, features = ["copy_key"] }
haneullabs-metrics.workspace = true
haneul-analytics-indexer-derive.workspace = true
haneul-indexer.workspace = true
haneul-types.workspace = true
telemetry-subscribers.workspace = true
haneul-rest-api.workspace = true
haneul-storage.workspace = true
workspace-hack.workspace = true

[dev-dependencies]

[[bin]]
name = "haneul-analytics-indexer"
path = "src/main.rs"
