[package]
name = "haneul-benchmark"
version = "0.0.0"
authors = ["Haneul Labs <build@haneul-labs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
async-trait = "0.1.61"
anyhow = { version = "1.0.64", features = ["backtrace"] }
futures = "0.3.23"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.88"
itertools = "0.10.4"
tokio = { workspace = true, features = ["full"] }
strum = "0.24.1"
strum_macros = "0.24.3"
rocksdb = "0.20.1"
tracing = "0.1.36"
clap = { version = "3.1.17", features = ["derive"] }
prometheus = "0.13.3"
rand = "0.8.5"
indicatif = "0.17.2"
duration-str = "0.5.0"
hdrhistogram = "7.5.1"
comfy-table = "6.1.3"
bcs = "0.1.4"
tokio-util = "0.7.4"
haneul-core = { path = "../haneul-core" }
haneul-config = { path = "../haneul-config" }
haneul-network = { path = "../haneul-network" }
haneul-types = { path = "../haneul-types" }
haneul-sdk = { path = "../haneul-sdk" }
haneul-keys = { path = "../haneul-keys" }
haneul-node = { path = "../haneul-node" }
haneul-json-rpc-types = { path = "../haneul-json-rpc-types" }
haneul-protocol-config = { path = "../haneul-protocol-config" }
telemetry-subscribers.workspace = true
roaring = "0.10.1"
regex = "1.7.1"

fastcrypto.workspace = true
move-core-types.workspace = true
move-package.workspace = true
haneullabs-metrics = { path = "../haneullabs-metrics" }
narwhal-node = { path = "../../narwhal/node" }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
test-utils = { path = "../test-utils" }
sysinfo = "0.27.5"

[target.'cfg(msim)'.dependencies]
haneul-framework = { path = "../haneul-framework" }
haneul-framework-snapshot = { path = "../haneul-framework-snapshot" }
haneul-macros = { path = "../haneul-macros" }
haneul-simulator = { path = "../haneul-simulator" }
typed-store = { path = "../typed-store" }

[features]
benchmark = ["narwhal-node/benchmark"]
