[package]
name = "haneul-benchmark"
version = "0.0.0"
authors = ["Haneul Labs <build@haneul-labs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
async-trait.workspace = true
anyhow = { workspace = true, features = ["backtrace"] }
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
itertools.workspace = true
tokio = { workspace = true, features = ["full"] }
strum.workspace = true
strum_macros.workspace = true
tracing.workspace = true
clap.workspace = true
prometheus.workspace = true
rand.workspace = true
indicatif.workspace = true
duration-str.workspace = true
hdrhistogram.workspace = true
comfy-table.workspace = true
bcs.workspace = true
tokio-util.workspace = true
haneul-core.workspace = true
haneul-config.workspace = true
haneul-network.workspace = true
haneul-storage.workspace = true
haneul-types.workspace = true
haneul-sdk.workspace = true
haneul-keys.workspace = true
haneul-json-rpc-types.workspace = true
haneul-protocol-config.workspace = true
haneul-test-transaction-builder.workspace = true
haneul-swarm-config.workspace = true
telemetry-subscribers.workspace = true
roaring.workspace = true
regex.workspace = true
fastcrypto-zkp.workspace = true

move-core-types.workspace = true
haneullabs-metrics.workspace = true
narwhal-node.workspace = true
test-cluster.workspace = true
sysinfo.workspace = true
workspace-hack.workspace = true

[target.'cfg(msim)'.dependencies]
haneul-framework.workspace = true
haneul-framework-snapshot.workspace = true
haneul-macros.workspace = true
haneul-simulator.workspace = true
typed-store.workspace = true

[features]
benchmark = ["narwhal-node/benchmark"]
