[package]
name = "haneul-benchmark"
version = "0.0.0"
authors = ["Haneul Labs <build@haneul-labs.com>"]
license = "Apache-2.0"
publish = false
edition = "2024"

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
anyhow = { workspace = true, features = ["backtrace"] }
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
itertools.workspace = true
tokio = { workspace = true, features = ["full"] }
strum.workspace = true
strum_macros.workspace = true
tracing.workspace = true
clap.workspace = true
prometheus.workspace = true
rand.workspace = true
indicatif.workspace = true
duration-str.workspace = true
hdrhistogram.workspace = true
comfy-table.workspace = true
bcs.workspace = true
tokio-util.workspace = true
haneul-core.workspace = true
haneul-config.workspace = true
haneul-network.workspace = true
haneul-storage.workspace = true
haneul-types.workspace = true
haneul-keys.workspace = true
haneul-protocol-config.workspace = true
haneul-test-transaction-builder.workspace = true
haneul-swarm-config.workspace = true
haneul-surfer.workspace = true
telemetry-subscribers.workspace = true
roaring.workspace = true
regex.workspace = true
fastcrypto-zkp.workspace = true
derive_more.workspace = true
haneul-rpc.workspace = true
haneul-rpc-api.workspace = true

move-core-types.workspace = true
haneullabs-metrics.workspace = true
test-cluster.workspace = true
sysinfo.workspace = true
haneullabs-common.workspace = true

haneul-move-build.workspace = true

[target.'cfg(msim)'.dependencies]
prost.workspace = true
haneul-framework.workspace = true
haneul-framework-snapshot.workspace = true
haneul-macros.workspace = true
haneul-rpc.workspace = true
haneul-simulator.workspace = true
typed-store.workspace = true
zstd.workspace = true
