[package]
name = "haneul-bridge-cli"
version.workspace = true
authors = ["Haneul Labs <build@haneul-labs.com>"]
license = "Apache-2.0"
publish = false
edition = "2024"

[dependencies]
alloy = { version = "1.1.3", features = ["rand", "sol-types", "json-rpc", "provider-ws"] }
haneul-bridge.workspace = true
haneul-types.workspace = true
haneul-config.workspace = true
haneul-keys.workspace = true
haneul-json-rpc-types.workspace = true
haneul-rpc.workspace = true
haneul-rpc-api.workspace = true
haneul-sdk-types.workspace = true
shared-crypto.workspace = true
fastcrypto.workspace = true
move-core-types.workspace = true
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_json.workspace = true
telemetry-subscribers.workspace = true
reqwest.workspace = true
futures.workspace = true
