[package]
name = "haneul-bridge-indexer"
version = "0.1.0"
authors = ["Haneul Labs <build@haneul-labs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
serde.workspace = true
tap.workspace = true
diesel = { workspace = true, features = ["serde_json"] }
diesel-async = { workspace = true, features = ["bb8", "postgres"] }
ethers = { version = "2.0", features = ["rustls", "ws"] }
rayon = "1.10.0"
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
futures.workspace = true
async-trait.workspace = true
bcs.workspace = true
bin-version.workspace = true
clap.workspace = true
haneullabs-metrics.workspace = true
prometheus.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
strum_macros.workspace = true
haneul-bridge.workspace = true
haneul-sdk.workspace = true
haneul-json-rpc-types.workspace = true
haneul-data-ingestion-core.workspace = true
haneul-types.workspace = true
telemetry-subscribers.workspace = true
tracing.workspace = true
backoff.workspace = true
haneul-config.workspace = true
tempfile.workspace = true
haneul-indexer-builder.workspace = true

[dev-dependencies]
haneul-types = { workspace = true, features = ["test-utils"] }
haneul-test-transaction-builder.workspace = true
test-cluster.workspace = true
hex-literal = "0.3.4"

[[bin]]
name = "bridge-indexer"
path = "src/main.rs"
