[package]
name = "haneul-bridge-watchdog"
version = "0.1.0"
authors = ["Haneul Labs <build@haneul-labs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
haneul-bridge.workspace = true
haneullabs-metrics.workspace = true
prometheus.workspace = true
anyhow.workspace = true
futures.workspace = true
async-trait.workspace = true
ethers = { version = "2.0" }
tracing.workspace = true
tokio = { workspace = true, features = ["full"] }
