[package]
name = "haneul-bridge"
version = "0.1.0"
authors = ["Haneul Labs <build@haneul-labs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
ethers = "2.0"
tokio = { workspace = true, features = ["full"] }
haneul-types.workspace = true
haneul-common.workspace = true
arc-swap.workspace = true
num_enum.workspace = true
move-core-types.workspace = true
url.workspace = true
futures.workspace = true
once_cell.workspace = true
telemetry-subscribers.workspace = true
prometheus.workspace = true
async-trait.workspace = true
typed-store-derive.workspace = true
rocksdb.workspace = true
typed-store.workspace = true
haneullabs-metrics.workspace = true
haneul-sdk.workspace = true
haneul-config.workspace = true
clap.workspace = true
tracing.workspace = true
git-version.workspace = true
const-str.workspace = true
bcs.workspace = true
haneul-json-rpc-types.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_json.workspace = true
eyre.workspace = true
tempfile.workspace = true
axum.workspace = true
anyhow.workspace = true
reqwest.workspace = true
fastcrypto.workspace = true
tap.workspace = true
rand.workspace = true
workspace-hack.workspace = true
lru.workspace = true
shared-crypto.workspace = true
backoff = { version = "0.4.0", features = [
  "futures",
] }

[dev-dependencies]
haneul-types = { workspace = true, features = ["test-utils"] }
haneul-json-rpc-types = { workspace = true, features = ["test-utils"] }
haneul-config.workspace = true
haneul-test-transaction-builder.workspace = true
test-cluster.workspace = true
hex-literal = "0.3.4"

[[bin]]
name = "haneul-bridge-cli"
path = "src/tools/cli.rs"
