[package]
name = "haneul-bridge"
version.workspace = true
authors = ["Haneul Labs <build@haneul-labs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
ethers = "2.0"
tokio = { workspace = true, features = ["full"] }
haneul-types.workspace = true
haneul-authority-aggregation.workspace = true
arc-swap.workspace = true
num_enum.workspace = true
move-core-types.workspace = true
url.workspace = true
futures.workspace = true
once_cell.workspace = true
telemetry-subscribers.workspace = true
prometheus.workspace = true
async-trait.workspace = true
typed-store.workspace = true
haneullabs-metrics.workspace = true
haneul-sdk.workspace = true
haneul-keys.workspace = true
haneul-config.workspace = true
clap.workspace = true
tracing.workspace = true
bin-version.workspace = true
bcs.workspace = true
haneul-json-rpc-types.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_json.workspace = true
eyre.workspace = true
tempfile.workspace = true
axum.workspace = true
anyhow.workspace = true
reqwest.workspace = true
fastcrypto.workspace = true
tap.workspace = true
rand.workspace = true
lru.workspace = true
shared-crypto.workspace = true
backoff.workspace = true
haneullabs-common.workspace = true
enum_dispatch.workspace = true
haneul-json-rpc-api.workspace = true
haneul-test-transaction-builder.workspace = true

[dev-dependencies]
haneul-types = { workspace = true, features = ["test-utils"] }
haneul-json-rpc-types = { workspace = true, features = ["test-utils"] }
haneul-config.workspace = true
haneul-test-transaction-builder.workspace = true
test-cluster.workspace = true
hex-literal = "0.3.4"
maplit = "1.0.2"
