[package]
name = "haneul-bridge"
version.workspace = true
authors = ["Haneul Labs <build@haneul-labs.com>"]
license = "Apache-2.0"
publish = false
edition = "2024"

[dependencies]
alloy = { version = "1.1.3", features = ["rand", "sol-types", "json-rpc", "provider-ws"] }
alloy-multiprovider-strategy = { git = "https://github.com/0xsiddharthks/alloy-multiprovider-strategy", rev = "0f8d034e679631a715f9eed104089430ae57283a" }
tokio = { workspace = true, features = ["full"] }
haneul-types.workspace = true
haneul-authority-aggregation.workspace = true
arc-swap.workspace = true
strum_macros.workspace = true
num_enum.workspace = true
move-core-types.workspace = true
url.workspace = true
futures.workspace = true
once_cell.workspace = true
telemetry-subscribers.workspace = true
prometheus.workspace = true
async-trait.workspace = true
typed-store.workspace = true
haneullabs-metrics.workspace = true
haneul-sdk.workspace = true
haneul-keys.workspace = true
haneul-config.workspace = true
clap.workspace = true
tracing.workspace = true
bin-version.workspace = true
bcs.workspace = true
haneul-json-rpc-types.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_json.workspace = true
eyre.workspace = true
tempfile.workspace = true
axum.workspace = true
anyhow.workspace = true
fastcrypto.workspace = true
tap.workspace = true
rand.workspace = true
shared-crypto.workspace = true
backoff.workspace = true
haneullabs-common.workspace = true
enum_dispatch.workspace = true
haneul-json-rpc-api.workspace = true
haneul-test-transaction-builder.workspace = true
haneul-metrics-push-client.workspace = true
hex-literal = { version = "0.3.4", optional = true }
test-cluster = { workspace = true, optional = true }
haneul-sdk-types.workspace = true
haneul-rpc.workspace = true
haneul-rpc-api.workspace = true
tonic.workspace = true
tower.workspace = true
thiserror.workspace = true
reqwest.workspace = true

[dev-dependencies]
bincode.workspace = true
haneul-config.workspace = true
haneul-test-transaction-builder.workspace = true
maplit = "1.0.2"

[features]
test-utils = ["hex-literal", "test-cluster"]
