[package]
name = "haneul-checkpoint-blob-indexer"
edition = "2024"
version.workspace = true
license = "Apache-2.0"
publish = false

[lib]
name = "haneul_checkpoint_blob_indexer"
path = "src/lib.rs"

[[bin]]
name = "haneul-checkpoint-blob-indexer"
path = "src/main.rs"

[dependencies]
haneul-config.workspace = true
haneul-indexer-alt-framework.workspace = true
haneul-indexer-alt-framework-store-traits.workspace = true
haneul-indexer-alt-object-store.workspace = true
haneul-rpc.workspace = true
haneul-types.workspace = true
haneul-indexer-alt-metrics.workspace = true
prost.workspace = true
serde.workspace = true
bytes.workspace = true
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
prometheus.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
object_store.workspace = true
serde_json.workspace = true
zstd.workspace = true
humantime.workspace = true

[lints]
workspace = true
