[package]
name = "haneul-cluster-test"
version = "0.1.0"
authors = ["Haneul Labs <build@haneul-labs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
futures = "0.3.24"
serde_json = "1.0.83"
tempfile = "3.3.0"
tokio = { version = "1.20.1", features = ["full"] }
jsonrpsee = { version = "0.15.1", features = ["full"] }
tracing = { version = "0.1.36", features = ["log"] }
clap = { version = "3.1.14", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
async-trait = "0.1.57"
anyhow = { version = "1.0.64", features = ["backtrace"] }
bcs = "0.1.4"
uuid = {version = "1.1.2", features = [ "v4", "fast-rng"]}
prometheus = "0.13.2"
fastcrypto = { workspace = true }

haneul-faucet = { path = "../haneul-faucet" }
haneul-swarm = { path = "../haneul-swarm" }
haneul = { path = "../haneul" }
haneul-json-rpc-types= { path = "../haneul-json-rpc-types" }
haneul-sdk = { path = "../haneul-sdk" }
haneul-keys = { path = "../haneul-keys" }
haneul-types = { path = "../haneul-types" }
haneul-core = { path = "../haneul-core" }
haneul-json = { path = "../haneul-json" }
haneul-config = { path = "../haneul-config" }
haneul-transaction-builder = { path = "../haneul-transaction-builder" }
telemetry-subscribers = { path = "../../crates/telemetry-subscribers" }

test-utils = { path = "../test-utils" }
workspace-hack.workspace = true
move-core-types.workspace = true
