[package]
name = "haneul-cluster-test"
version.workspace = true
authors = ["Haneul Labs <build@haneul-labs.com>"]
license = "Apache-2.0"
publish = false
edition = "2024"

[dependencies]
futures.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
jsonrpsee.workspace = true
tracing.workspace = true
clap.workspace = true
reqwest.workspace = true
async-trait.workspace = true
anyhow = { workspace = true, features = ["backtrace"] }
uuid.workspace = true
prometheus.workspace = true
fastcrypto.workspace = true
shared-crypto.workspace = true
derive_more = { workspace = true, features = ["debug"] }
regex.workspace = true

haneul-faucet.workspace = true
haneul-swarm.workspace = true
haneul-swarm-config.workspace = true
haneul-json-rpc-types.workspace = true
haneul-sdk.workspace = true
haneul-keys.workspace = true
haneul-types.workspace = true
haneul-core.workspace = true
haneul-json.workspace = true
haneul-config.workspace = true
haneul-test-transaction-builder.workspace = true
telemetry-subscribers.workspace = true

test-cluster.workspace = true
move-core-types.workspace = true
haneul-move-build.workspace = true
