[package]
name = "haneul-config"
version = "0.0.0"
authors = ["Haneul Labs <build@haneul-labs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anemo.workspace = true
anyhow = { version = "1.0.64", features = ["backtrace"] }
bcs = "0.1.4"
camino = "1.1.1"
csv = "1.2.1"
dirs = "4.0.0"
fastcrypto.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
once_cell = "1.16"
rand = "0.8.5"
serde = { version = "1.0.144", features = ["derive", "rc"] }
serde_with = "2.1.0"
serde_yaml = "0.8.26"
tempfile = "3.3.0"
tracing = "0.1.36"

narwhal-config = { path = "../../narwhal/config" }
shared-crypto = { path = "../shared-crypto" }
haneul-adapter = { path = "../haneul-adapter" }
haneul-framework = { path = "../haneul-framework" }
haneul-keys = { path = "../haneul-keys" }
haneul-move-natives = { path = "../haneul-move-natives" }
haneul-protocol-config = { path = "../haneul-protocol-config" }
haneul-storage = { path = "../haneul-storage" }
haneul-types = { path = "../haneul-types" }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
[target.'cfg(msim)'.dependencies]
haneul-simulator = { path = "../haneul-simulator" }

[dev-dependencies]
insta = { version = "1.21.1", features = ["redactions", "yaml"] }
tempfile = "3.3.0"
haneul-types = { path = "../haneul-types", features = ["test-utils"] }
